k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: angular-frontend
  template:
    metadata:
      labels:
        app: angular-frontend
    spec:
      containers:
        - name: angular-frontend
          image: ghcr.io/<GITHUB_ORG_OR_USER>/angular-k8s-demo:latest
          ports:
            - containerPort: 80
